propellor (5.10.1) UNRELEASED; urgency=medium

  * Localdir.hasOriginUrl: Depend on Git.installed.
  * Localdir.hasOriginUrl: Type changed from UnixLike to DebianLike
    because Git.installed is not implemented for other unixes.
    (API change)

 -- Joey Hess <id@joeyh.name>  Thu, 08 Aug 2019 11:33:37 -0400

propellor (5.9.1) unstable; urgency=medium

  * Apt: Debian has changed the name of the suite for testing security updates
    from testing to testing-security.
  * Apt: Also the suite for stable releases from bullseye on will be
    suffixed with "-security".
  * Apt.update: Pass --allow-releaseinfo-change when updating Unstable
    or Testing, so that code name changes that happen in those suites
    during a stable release don't prevent updating the rolling suites.
  * Systemd.machined: Fix a bug that caused the systemd-container package
    to not be installed when used with Debian buster.

 -- Joey Hess <id@joeyh.name>  Wed, 17 Jul 2019 15:59:29 -0400

propellor (5.9.0) unstable; urgency=medium

  * Added custom type error messages when Properties don't combine due to
    conflicting MetaTypes.
  * Added custom type error messages for ensureProperty and tightenTargets.
  * Note that those changes made ghc 8.0.1 in a few cases unable to infer
    types when ensureProperty or tightenTargets is used, while later ghc
    versions had no difficulty. If this affects building your properties,
    adding a type annotation to the code will work around the problem.
  * Added custom type error messages displayed when type inference
    fails when using ensureProperty and tightenTargets, that suggest
    adding a type annotation.
  * Use the type-errors library to detect when the type checker gets stuck
    unable to reduce type-level operations on MetaTypes, and avoid 
    displaying massive error messages.
  * But, since type-errors is a new library not available in eg Debian
    yet, added a WithTypeErrors build flag. When the library is not