@@ -4,6 +4,10 @@ propellor (5.10.1) UNRELEASED; urgency=medium
   * Localdir.hasOriginUrl: Type changed from UnixLike to DebianLike
     because Git.installed is not implemented for other unixes.
     (API change)
+  * Changed the ChrootBootstrapper type class's buildchroot method
+    to take a Info parameter, instead of Maybe System.
+    (The System can be extracted from the Info.)
+    (API change)
 
  -- Joey Hess <id@joeyh.name>  Thu, 08 Aug 2019 11:33:37 -0400
 
